[package]
name = "am_you_unique"
version = "0.1.0"
authors = ["Osrepnay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["rustls"]}
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
